--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
+@import "../node_modules/@blueprintjs/core/lib/css/blueprint.css";
+@import "../node_modules/@blueprintjs/table/lib/css/table.css";
+@import "../node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css";
 td, th{
   min-width:150px;
   height:30px;
   text-align:left;
-}
-tr:nth-child(even){
-  background:lightgrey;
 }
